--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Severdigheter</string>
     <string name="title_activity_maps">MapsActivity</string>
     <string name="name">Navn</string>
-    <string name="info">Info</string>
+    <string name="adr">Adresse</string>
     <string name="del">Slett</string>
     <string name="save">Lagre</string>
 </resources>
