Pojo endret, lagt til info igjen på edit xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="adr">Adresse</string>
     <string name="del">Slett</string>
     <string name="save">Lagre</string>
+    <string name="info">Info</string>
 </resources>
